--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.3.2",
     "@stripe/stripe-js": "^2.1.11",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "cookies-next": "^3.0.0",
